--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,24 +22,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.928" />
 
-    <com.atomicbrawlers.customjoystick.FirstCustomView
-        android:id="@+id/custView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        custom:circleColor="#ff0099"
-        custom:circleLabel="Hello"
-        custom:labelColor="#ffff66" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="118dp"
@@ -57,5 +39,26 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
+
+    <com.atomicbrawlers.customjoystick.JoystickView
+        android:layout_width="237dp"
+        android:layout_height="227dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:backgroundColor="@android:color/holo_purple"
+        app:borderColor="@android:color/holo_blue_light"
+        app:borderSize="5dp"
+        app:canvasPadding="10dp"
+        app:layoutSize="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.386"
+        app:thumbstickColor="@color/colorAccent"
+        app:thumbstickRadius="33dp" />
 
 </android.support.constraint.ConstraintLayout>
