--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,8 @@
         app:layout_constraintVertical_bias="0.964" />
 
     <com.atomicbrawlers.customjoystick.JoystickView
-        android:layout_width="237dp"
-        android:layout_height="227dp"
+        android:layout_width="251dp"
+        android:layout_height="243dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -51,14 +51,13 @@
         app:borderColor="@android:color/holo_blue_light"
         app:borderSize="5dp"
         app:canvasPadding="10dp"
-        app:layoutSize="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.434"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.386"
+        app:layout_constraintVertical_bias="0.413"
         app:thumbstickColor="@color/colorAccent"
-        app:thumbstickRadius="33dp" />
+        app:thumbstickRadius="33dp"
+        tools:layout_editor_absoluteY="183dp" />
 
 </android.support.constraint.ConstraintLayout>
