--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,11 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.atomicbrawlers.customjoystick.MainActivity">
+    tools:context="com.atomicbrawlers.customjoystick.MainActivity"
+    android:clipChildren="false" >
 
-    <!-- com.atomicbrawlers.customjoystick.FirstCustomView -->
+    <!-- com.atomicbrawlers.customjoystick.FirstCustomView
+    android:clipChildren="false" -->
 
     <TextView
         android:id="@+id/textView"
@@ -22,24 +24,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.928" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="118dp"
-        android:layout_height="59dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:enabled="true"
-        android:onClick="buttonPressed"
-        android:text="PRESS ME"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.101"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.964" />
-
     <com.atomicbrawlers.customjoystick.JoystickView
         android:layout_width="251dp"
         android:layout_height="243dp"
@@ -47,7 +31,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        app:backgroundColor="@android:color/holo_purple"
+        app:joystickColor="@android:color/holo_purple"
         app:borderColor="@android:color/holo_blue_light"
         app:borderSize="5dp"
         app:canvasPadding="10dp"
