--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,10 +31,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        app:joystickColor="@android:color/holo_purple"
+        app:autoRecenterThumbstick="true"
         app:borderColor="@android:color/holo_blue_light"
         app:borderSize="5dp"
         app:canvasPadding="10dp"
+        app:joystickColor="@android:color/holo_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
